--- a/src/view/sample.fxml
+++ b/src/view/sample.fxml
@@ -7,14 +7,15 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
-   <VBox prefHeight="200.0" prefWidth="100.0">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
+   <VBox prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
       <children>
           <Label text="Bienvenue sur la V0.1 de Project1" />
-          <Button text="DownLoad" />
+          <Button onAction="#downloadFile" text="DownLoad" />
       </children>
    </VBox>
    <columnConstraints>
+      <ColumnConstraints />
       <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
